# fraud-detection

./: .gitignore  README.md  fraud_shap_analysis.ipynb  generate_focused_links.py  generate_linked_report.py  pyproject.toml  show_links.py  sweep_rerun_conclusions_20251214.md  test_features.py
.github/agents/: code-implementation.agent.md  implementation-plan.agent.md
.github/instructions/: project instructions.instructions.md
config/: default.yaml
models/test_production/: intrinsic_model.joblib  similarity_metadata.joblib
plan/: feature-fraud-detection-synthetic-data-1.md  plan-featureFraudDetectionSyntheticData1.prompt.md  prompt.md
src/: __init__.py  config.py  detect_fraud.py  evaluate.py  generate_dataset.py  sweep.py  train_production.py
src/data/: __init__.py  fraud_injector.py  fraud_patterns.py  generator.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  base.py  clustering.py  ensemble.py  explainer.py  features.py  preprocessing.py
src/models/detectors/: __init__.py  dbscan.py  graph.py  isolation_forest.py  lof.py
src/scoring/: __init__.py  intrinsic_features.py  realtime.py  similarity_index.py
src/utils/: __init__.py  address.py  logging.py  text.py
tests/: __init__.py  conftest.py  test_config.py  test_utils.py
tests/test_evaluation/: __init__.py  test_metrics.py
tests/test_integration/: test_pipeline.py
tests/test_scoring/: __init__.py  test_intrinsic_features.py
