[project]
name = "fraud-detection-synthetic"
version = "1.0.0"
description = "Synthetic dataset generation and clustering-based fraud detection for telecommunications"
requires-python = ">=3.10"
dependencies = [
    "faker>=24.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "jellyfish>=1.0.0",
]

[project.scripts]
generate-dataset = "src.generate_dataset:main"
detect-fraud = "src.detect_fraud:main"
evaluate = "src.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
